# detectDeeppcb

./: CMakeLists.txt  DefectInspect.pro  README.md
include/: DefectDetector.h  DetectionTypes.h  DetectionWorker.h  ImageUtils.h  MainWindow.h  OpenCvCompat.h
src/: DefectDetector.cpp  DetectionWorker.cpp  ImageUtils.cpp  MainWindow.cpp  main.cpp
